--- a/mentoria.html
+++ b/mentoria.html
@@ -28,7 +28,7 @@
 
 	<!-- THEME / PLUGIN CSS -->
 	<link rel="stylesheet" href="js/vendors/slick/slick.css">
-	<link rel="stylesheet" href="css/style.css?version=2.2">
+	<link rel="stylesheet" href="css/style.css?version=2.3">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -145,8 +145,8 @@
 						<p class="font-light animate__animated animate__fadeInUp wow">Se trata de un asesoramiento
 							intensivo con el principal objetivo de transformar tu proyecto en el mundo online trabajando
 							sobre diversos conceptos que te ayudarán a comunicar tu propuesta de valor y a potenciar tu
-							estrategia digital. <b>Que sea grupal significa que llevarás el asesoramiento con
-								emprendedoras que están en tu misma situación,</b> con quienes compartirás la
+							estrategia digital. Que sea grupal significa que llevarás el asesoramiento con
+								emprendedoras que están en tu misma situación, con quienes compartirás la
 							experiencia para crecer aún más, en comunidad. </p>
 						<a href="#contacto"
 							class="btn btn-lg btn-primary space20 page-scroll mt-3 animate__animated animate__bounceIn wow"
