--- a/masterclass.html
+++ b/masterclass.html
@@ -28,7 +28,7 @@
 
 	<!-- THEME / PLUGIN CSS -->
 	<link rel="stylesheet" href="js/vendors/slick/slick.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css?v=1.2">
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
